# termi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  settings.json
termi/: __init__.py  cli.py
termi/core/: __init__.py  agent.py  conversation.py  error_explainer.py  executor.py  explainer.py  intent.py  provider_manager.py  settings.py  system.py  system_query.py
termi/database/: __init__.py  database.py  history_repository.py
termi/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
termi/utils/: __init__.py  dangerous_commands.py  exceptions.py  logger.py
tests/: __init__.py  test_conversation.py  test_database.py  test_history_repository.py  test_provider_factory.py  test_provider_manager.py  test_settings.py
