[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termi-ai"
version = "0.1.0"
description = "AI-powered cross-platform terminal assistant that converts natural language into shell commands."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Termi Contributors" }]
keywords = ["cli", "ai", "llm", "terminal", "shell", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
groq = ["groq>=0.9.0"]
openai = ["openai>=1.30.0"]
gemini = ["google-genai>=0.3.0"]
anthropic = ["anthropic>=0.30.0"]
all = ["groq>=0.9.0", "openai>=1.30.0", "google-genai>=0.3.0", "anthropic>=0.30.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "isort>=5.13.0",
]

[project.scripts]
termi = "termi.cli:run"

[tool.setuptools.packages.find]
include = ["termi*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["termi"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
